--- a/styles/grid.css
+++ b/styles/grid.css
@@ -41,10 +41,11 @@
 }
 
 .icon-placeholder {
-    font-size: 48px;
-    line-height: 48px;
     margin-bottom: 10px;
     opacity: 0.8;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .shortcut-title {
